# codex-cloud-environment

./: .gitignore  CLAUDE.md
fnl-builder-main/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
fnl-builder-main/.github/workflows/: ci.yml
fnl-builder-main/docs/: design.md  dev-spec.md  fnl-builder_#U64cd#U4f5c#U30de#U30cb#U30e5#U30a2#U30eb.docx  known-debt.md  llm-adapter-guide.md  python-api.md
fnl-builder-main/fixtures/sample_bundle/: README.md  expected_audit.json
fnl-builder-main/fixtures/sample_bundle_csv/: 1027_E417_MessageList(CSV).csv  README.md  expected_audit.json
fnl-builder-main/src/fnl_builder/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
fnl-builder-main/tests/: test_cli.py  test_config.py  test_pipeline.py  test_pipeline_audit.py  test_public_api.py  test_smoke.py  test_types.py
fnl-builder-main/tests/e2e/: generate_golden.py  test_llm_quality.py  test_pipeline_e2e.py  test_pipeline_smoke_minimum.py
fnl-builder-main/tests/integrate/: test_category.py  test_guest_builder.py  test_p_markers.py  test_remark_rewrite.py  test_room_merge.py  test_room_merge_group.py  test_room_merge_name.py  test_room_merge_name_flow.py  test_room_merge_name_llm.py  test_room_merge_parse.py  test_room_sharing.py  test_vip.py
fnl-builder-main/tests/llm/: test_chunking.py  test_extraction.py  test_mock_adapter.py  test_openai.py  test_pipeline_llm.py  test_prompts.py  test_quote.py  test_response_parser.py
fnl-builder-main/tests/parse/: test_course_code.py  test_passenger.py  (+7 more)
(+81 files in other folders)
