[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnl-builder"
version = "0.1.0"
description = "Build final guest list Excel files from Rooming/Passenger/MessageList documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pypdf>=4.0,<7.0", "openpyxl>=3.1.0,<4.0"]
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Developers",
]

[project.scripts]
fnl-builder = "fnl_builder.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "build",
]
ui = [
  "streamlit>=1.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fnl_builder = ["py.typed", "**/*.xlsx", "**/*.txt", "**/*.md", "**/*.yaml", "**/*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
strict = true
exclude = "^src/fnl_builder/ui/app\\.py$"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "llm_quality: LLM prompt regression tests (require real or mock LLM)",
]
